01_pipeline/route-eventlistener-github.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-github-listener
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-listener
spec:
  to:
    kind: Service
    name: el-github-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
